Refactor login page to be its own class

--- a/chat_test.html
+++ b/chat_test.html
@@ -27,10 +27,11 @@ v
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
 <script type="text/javascript" src="class-ChatManager.js"></script>
+<script type="text/javascript" src="class-LoginPage.js"></script>
 <script type="text/javascript" src="peer.js"></script>
 <script type="text/javascript" src="maqaw-toolbelt.js"></script>
 <script type="text/javascript" src="class-ChatSessions.js"></script>
-<script type="text/javascript" src="class-ClientSession.js"></script>
+<script type="text/javascript" src="class-VisitorSession.js"></script>
 <script type="text/javascript" src="class-MaqawManager.js"></script>
 <script type="text/javascript" src="class-MaqawDisplay.js"></script>
 <script type="text/javascript" src="class-Representative.js"></script>
