--- a/example/Login.html
+++ b/example/Login.html
@@ -69,7 +69,7 @@
                      <input type="button" value="Connect" id="connect"><br><br>
                        
                      <div id="messages"></div>
-      <div id="p2Mouse" style="position: absolute; top:0px; left: 0px; background-color: red; width: 10px; height: 10px; display: none;">
+      <div id="p2Mouse" style="position: absolute; top:0; left: 0; background-color: red; width: 10px; height: 10px; display: none;">
       
       </div>
 
