--- a/chat_test.html
+++ b/chat_test.html
@@ -69,7 +69,8 @@ v
 
 <script type="text/javascript">
     var maqawOptions = {
-        key: 'cat'
+        key: 'cat',
+        name: 'Maqaw'
     };
 </script>
 
