Change VisitorList to support new connection class

--- a/chat_test.html
+++ b/chat_test.html
@@ -75,10 +75,12 @@ v
 </script>
 
 <script type="text/javascript" src="class-ChatManager.js"></script>
+<script type="text/javascript" src="class-Connection.js"></script>
+<script type="text/javascript" src="class-ConnectionManager.js"></script>
 <script type="text/javascript" src="class-LoginPage.js"></script>
 <script type="text/javascript" src="peer.js"></script>
 <script type="text/javascript" src="maqaw-toolbelt.js"></script>
-<script type="text/javascript" src="class-ChatSessions.js"></script>
+<script type="text/javascript" src="class-ChatSession.js"></script>
 <script type="text/javascript" src="class-VisitorSession.js"></script>
 <script type="text/javascript" src="class-MaqawManager.js"></script>
 <script type="text/javascript" src="class-MaqawDisplay.js"></script>
