--- a/chat_test.html
+++ b/chat_test.html
@@ -3,8 +3,6 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-
-    <link rel="stylesheet" type="text/css" href="maqaw.css"/>
     <title>Maqaw</title>
 </head>
 <body style='background-color: black; color: white;'>
@@ -72,6 +70,7 @@ v
         key: 'cat',
         name: 'Maqaw'
     };
+    var maqawDebug = true;
 </script>
 
 <script type="text/javascript" src="class-ChatManager.js"></script>
