Buggy but working

--- a/chat_test.html
+++ b/chat_test.html
@@ -66,10 +66,7 @@ v
 
 
 <script type="text/javascript">
-    var maqawOptions = {
-        key: 'cat',
-        name: 'Maqaw'
-    };
+    var maqawOptions = { key: "51f1fdb09f25635f29000001", name: "Eli" };
     var maqawDebug = true;
 </script>
 
