--- a/chat_test.html
+++ b/chat_test.html
@@ -4,6 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
     <title>Maqaw</title>
+    <link href="maqaw.css" rel="stylesheet" type="text/css">
 </head>
 <body style='background-color: black; color: white;'>
 <p>asd</p>
@@ -68,6 +69,7 @@ v
 <script type="text/javascript">
     var maqawOptions = { key: "51f1fdb09f25635f29000001", name: "Eli" };
     var maqawDebug = true;
+    var maqawLoadCss = false;
 </script>
 
 <script type="text/javascript" src="class-ChatManager.js"></script>
