--- a/chat_test.html
+++ b/chat_test.html
@@ -66,10 +66,13 @@ v
 
 
 <script type="text/javascript">
-    var maqawOptions = { key: "51f1fdb09f25635f29000001", name: "Eli" };
+    var maqawOptions = { key: "51f16cc4e81a103b3c000001", name: "Maqaw" };
     var maqawDebug = true;
 </script>
 
+<script type="text/javascript" src="mirror/class-MaqawMirror.js"></script>
+<script type="text/javascript" src="mirror/tree_mirror.js"></script>
+<script type="text/javascript" src="mirror/mutation_summary.js"></script>
 <script type="text/javascript" src="class-ChatManager.js"></script>
 <script type="text/javascript" src="class-Connection.js"></script>
 <script type="text/javascript" src="class-ConnectionManager.js"></script>
@@ -85,5 +88,6 @@ v
 <script type="text/javascript" src="class-Visitor.js"></script>
 <script type="text/javascript" src="class-VisitorList.js"></script>
 <script type="text/javascript" src="maqaw.js"></script>
+
 </body>
 </html>
