--- a/mirror/examples/client.html
+++ b/mirror/examples/client.html
@@ -1,10 +1,90 @@
-<html>
+<?xml version="1.0" encoding="utf-8"?>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
+  </head>
+  <body style='background-color: black; color: white;'>
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>v
+    v
+    <p>asd</p>vvvv<p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>vvvv<p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+    <p>asd</p>
+
+
+    <script type="text/javascript">
+        var maqawOptions = { key: "51f16cc4e81a103b3c000001", name: "Maqaw" };
+        var maqawDebug = true;
+    </script>
     <script src="http://cdn.peerjs.com/0/peer.min.js"></script>
     <script src="../tree_mirror.js"></script>
     <script src="../mutation_summary.js"></script>
     <script src="../class-MaqawMirror.js"></script>
-
+    <script type="text/javascript" src="../../class-ChatManager.js"></script>
+    <script type="text/javascript" src="../../class-Connection.js"></script>
+    <script type="text/javascript" src="../../class-ConnectionManager.js"></script>
+    <script type="text/javascript" src="../../class-LoginPage.js"></script>
+    <script type="text/javascript" src="../../peer.js"></script>
+    <script type="text/javascript" src="../../maqaw-toolbelt.js"></script>
+    <script type="text/javascript" src="../../class-ChatSession.js"></script>
+    <script type="text/javascript" src="../../class-VisitorSession.js"></script>
+    <script type="text/javascript" src="../../class-MaqawManager.js"></script>
+    <script type="text/javascript" src="../../class-MaqawDisplay.js"></script>
+    <script type="text/javascript" src="../../class-Representative.js"></script>
+    <script type="text/javascript" src="../../class-RepSession.js"></script>
+    <script type="text/javascript" src="../../class-Visitor.js"></script>
+    <script type="text/javascript" src="../../class-VisitorList.js"></script>
+    <script type="text/javascript" src="../../maqaw.js"></script>
     <script>
       var peer = new Peer('calvin', {key: 'q1349jdr8bw6d2t9'});
       var conn = peer.connect('calvin1', {reliable: true});
@@ -14,8 +94,5 @@
       });
     </script>
 
-  </head>
-  <body>
-    <h1> tits </h1>
   </body>
 </html>
