--- a/chat_test.html
+++ b/chat_test.html
@@ -67,7 +67,7 @@ v
 
 
 <script type="text/javascript">
-    var maqawOptions = { key: "51f1fdb09f25635f29000001", name: "Eli" };
+    var maqawOptions = { key: "51f16cc4e81a103b3c000001", name: "Maqaw" };
     var maqawDebug = true;
     var maqawLoadCss = false;
 </script>
