Add Peer foundation

--- a/chat_test.html
+++ b/chat_test.html
@@ -75,6 +75,8 @@ v
 <script type="text/javascript" src="mirror/class-MaqawMirror.js"></script>
 <script type="text/javascript" src="mirror/tree_mirror.js"></script>
 <script type="text/javascript" src="mirror/mutation_summary.js"></script>
+<script type="text/javascript" src="peer/class-MaqawPeer.js"></script>
+<script type="text/javascript" src="peer/class-DataConnection.js"></script>
 <script type="text/javascript" src="class-ChatManager.js"></script>
 <script type="text/javascript" src="class-Connection.js"></script>
 <script type="text/javascript" src="class-ConnectionManager.js"></script>
