--- a/chat_test.html
+++ b/chat_test.html
@@ -75,6 +75,7 @@ v
 <script type="text/javascript" src="mirror/class-MaqawMirror.js"></script>
 <script type="text/javascript" src="mirror/tree_mirror.js"></script>
 <script type="text/javascript" src="mirror/mutation_summary.js"></script>
+<script type="text/javascript" src="http://localhost:3001/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="peer/class-MaqawPeer.js"></script>
 <script type="text/javascript" src="peer/class-DataConnection.js"></script>
 <script type="text/javascript" src="class-ChatManager.js"></script>
